<resources>
    <string name="app_name">Korcula Trails</string>
    <string name="action_settings">Settings</string>
    <string name="entry_text">What do you want?</string>
    <string name="bicycle_trails_btn">Bicycle Trails</string>
    <string name="walking_trails_btn">Walking Trails</string>
    <string name="b_trail1_btn">Korčula - Žrnovo - Orlanduša</string>
    <string name="b_trail2_btn">Korčula - Žrnovo - Rasohatica</string>
    <string name="b_trail3_btn">Korčula - Žrnovo - Bačva</string>
    <string name="b_trail4_btn">Korčula - Žrnovo - Pupnat - Kneže - Račišće</string>
    <string name="b_trail5_btn">Žrnovo - Pupnat - Pupnatska Luka - Čara - Zavalatica</string>
    <string name="b_trail6_btn">Korčula - Lumbarda</string>
    <string name="w_trail1_btn">New Button</string>
    <string name="w_trail2_btn">New Button</string>
    <string name="w_trail3_btn">New Button</string>
    <string name="title_activity_bicycle_trails">Bicycle Trails</string>
    <string name="title_activity_walking_trails">Walking Trails</string>
    <string name="title_activity_bicycle_trail1">Korčula - Žrnovo - Orlanduša</string>
    <string name="title_activity_bicycle_trail2">Korčula - Žrnovo - Rasohatica</string>
    <string name="title_activity_bicycle_trail3">Korčula - Žrnovo - Bačva</string>
    <string name="title_activity_bicycle_trail4">Korčula - Žrnovo - Pupnat - Kneže - Račišće</string>
    <string name="title_activity_bicycle_trail5">Žrnovo - Pupnat - Pupnatska Luka - Čara - Zavalatica</string>
    <string name="title_activity_bicycle_trail6">Korčula - Lumbarda</string>
    <string name="bicycle_trail1_entry">Center of Korčula – Put Sv. Nikole - Church of St. Nicholas; Novi puti (below Forteca) – View on Old Town; Žrnovo – Prvo selo – church, Kampuš – church, Postrana – church; macadam road to Orlanduša Bay\n\nTrail facilities: length 30,9 km - ascent/descent altitude 864 m/-864 m - max altitude 343 m</string>
    <string name="bicycle_trail2_entry">Center of Korčula – Put Sv. Nikole - Church of St. Nicholas; Novi puti (below Forteca) – View on Old Town; Žrnovo – Prvo selo – church, Kampuš – church, Postrana – church; macadam road to Rasohatica Bay\n\nTrail facilities: length 12,3 km - ascent/descent altitude 472 m/-498 m - max altitude 223 m</string>
    <string name="bicycle_trail3_entry">Center of Korčula – Put Sv. Nikole - Church of St. Nicholas; Novi puti (below Forteca) – View on Old Town; Žrnovo – Prvo selo – church, Kampuš – church, Postrana – church; macadam road to Bačva Bay - sea view\n\nTrail facilities: length 28,2 km - ascent/descent altitude 889 m/-889 m - max altitude 343 m</string>
    <string name="bicycle_trail4_entry">Center of Korčula – Put Sv. Nikole - Church of St. Nicholas; Novi puti (below Forteca) – View on Old Town; Žrnovo – Prvo selo – Marmont road, Pupnat – church, Road to Kneže - View on Kneže Bay; Račišće church - View of the place - Vaja Bay -Return to Korčula - passing through the places Kneže, Žrnovska Banja, Medvinjak - road by the sea\n\nTrail facilities: length 28,2 km - ascent/descent altitude 889 m/-889 m - max altitude 343 m</string>
    <string name="bicycle_trail5_entry">Žrnovo – Prvo selo, Marmont road, Pupnat – church, Pupnatska luka – beach, Cara – place, church, famous cypress, church in the field, citadel; Zavalatica – place, Žitna Bay\n\nTrail facilities: length 52,6 km - ascent/descent altitude 1195 m/-1195 m - max altitude 340 m</string>
    <string name="bicycle_trail6_entry">Center of Korčula; Park forest Hober; St. Anthony - view of Korčula archipelago; Lumbarajsko Račišće\n\nTrail facilities: length 20,0 km - ascent/descent altitude 459 m/-459 m - max altitude 81 m</string>
    <string name="kml_best_open">The best way to open this *.kml file is to open it by Orux Maps application that you can find on Google Play Store:</string>
    <string name="bicycle_trail1_properties">Trail facilities: length 30,9 km - ascent/descent altitude 864 m/-864 m - max altitude 343 m</string>
    <string name="korcula_logo">korculaLogo</string>
    <string name="korcula_panorama">korcula</string>
    <string name="hello_world">Lorem Ipsum</string>
    <string name="orlandusa_beach">Orlandusa Beach</string>
      <string name="dwnld_kml">Download .KML File</string>
    <string name="open_kml">Open .KML File</string>
    <string name="about"><u>About</u></string>
    <string name="playstoredwnld">Download from Play Store</string>
    <string name="title_activity_about">About</string>
    <string name="elev_korcula_bacva_korcula">elev_korc-bacva-korc</string>
    <string name="elevacija_korcula_bacva">elev_korc-bacva-korc</string>
    <string name="elev_korcula_lumbarda">elev_korcula_lumbarda</string>
    <string name="racisce_sunset">Racisce zalazak</string>
    <string name="ev_korcula_racisce">Visinska Orlandusa Racisce</string>
    <string name="title_activity_ev_korcula_racisce_photo">Korcula - Racisce</string>
    <string name="elevation_korcula_orlandusa_korcula">Visinska Orlandusa</string>
    <string name="title_activity_bicycle_trail1map">etc</string>
    <string name="orlandusa_bay">Orlandusa bay</string>
    <string name="rasohatica_bay">Rasohatica bay</string>
    <string name="bacva_view">Bacva view</string>
    <string name="elevation_bacva_bay">Visinska Bačva</string>
    <string name="church_zavalatica">Crkva Zavalatica</string>
    <string name="elevation_zrnovo_zavalatica">Visinska Zavalatica</string>
    <string name="lumbarda_lighthouse">Lumbarda</string>


</resources>
