<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_material_dark">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="hr.visimedia.myapplication.BicycleTrail3"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bicycle_trail3_entry"
            android:id="@+id/textView"
            android:layout_marginBottom="15dp"
            android:textColor="@color/primary_material_light" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView8"
            android:layout_below="@+id/textView"
            android:adjustViewBounds="true"
            android:src="@drawable/bacva_view"
            android:contentDescription="@string/bacva_view" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:focusable="true"
            android:layout_below="@+id/imageView8"
            android:src="@drawable/elevation_korcula_bacva_korcula"
            android:cropToPadding="false"
            android:longClickable="true"
            android:focusableInTouchMode="false"
            android:contentDescription="@string/elev_korcula_bacva_korcula"
            android:adjustViewBounds="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dwnld_kml"
            android:id="@+id/button9"
            android:onClick="dwnldKmlKorculaBacva"
            android:layout_below="@+id/imageView2"
            android:layout_marginBottom="20dp"
            android:layout_alignParentLeft="true"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_kml"
            android:id="@+id/button10"
            android:onClick="openKmlKorculaBacva"
            android:layout_below="@+id/imageView2"
            android:layout_marginBottom="20dp"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/button9"
            android:layout_toRightOf="@+id/button9" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kml_best_open"
            android:id="@+id/textView2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_material_light"
            android:layout_below="@+id/button9"
            android:layout_marginBottom="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:contentDescription="@string/playstoredwnld"
            android:src="@drawable/playstore"
            android:focusable="true"
            android:layout_below="@+id/textView2"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="playStoreOrux"/>


    </RelativeLayout>
</ScrollView>