<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background_floating_material_dark"
  >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/korcula_logo"
        android:src="@mipmap/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button" />

    <Button
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bicycle_trails_btn"
        android:id="@+id/button"
        android:width="300dp"
        android:height="40dp"
        android:clickable="true"
        android:background="#ffffffff"
        android:textSize="25sp"
        android:onClick="bicycleTrails"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button2"
        android:layout_marginBottom="10dp"
         />

    <Button
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walking_trails_btn"
        android:id="@+id/button2"
        android:height="40dp"
        android:background="#ffffffff"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:textSize="25sp"
        android:onClick="walkingTrails"
        android:width="300dp"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:onClick="aboutButton"
        android:id="@+id/textView3"
        android:textColor="#ff5adeff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:autoLink="all"
        android:linksClickable="true" />



</RelativeLayout>
