<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ff56ff56">
    tools:context="hr.visimedia.myapplication.WalkingTrails">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_trail1_btn"
        android:id="@+id/button3"
        android:width="300dp"
        android:height="75dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:background="#ffffffff"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="#ff232323" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_trail2_btn"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:width="300dp"
        android:height="75dp"
        android:background="#ffffffff"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="#ff232323" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_trail3_btn"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_marginBottom="5dp"
        android:width="300dp"
        android:height="75dp"
        android:background="#ffffffff"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="#ff232323" />


</RelativeLayout>
